[package]
name = "log_spit"
version = "0.1.0"
authors = ["Moss Cantwell <mossman2142@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-value = "0.6"
serde_derive = "1.0"
serde_gelf = "0.1"
serde_json = "1.0"
clap = "2.24.2"